Added descriptions and fixed markup a bit

--- a/index.html
+++ b/index.html
@@ -35,13 +35,20 @@
 
         <div class="row">
           <div class="col-md-6">
-            <h2>Projects I've Worked On: <h2>
-            <p><a href="https://byu-odh.github.io/apeworm/">APE Worm</a></p>
-            <p><a href="https://hummedia.byu.edu">Humanities Online Media</p></a>
-            <p><a href="http://ape.byu.edu">Automatic Pronuciation Evaluation (APE)</p></a>
+            <h2>Projects I've Worked On: </h2>
+
+            <h3 class="project-title" onclick="toggleWormDescription()">APE Worm</h3>
+            <p id="apeworm-description">The APE Worm is a real-time pronunciation evaluator that runs in the browser. Try it out <a href="https://byu-odh.github.io/apeworm/">here.</a></p>
+
+            <h3 class="project-title" onclick="toggleHummediaDescription()">Humanities Online Media</h3>
+            <p id="hummedia-description">The <a href="https://hummedia.byu.edu">Hummedia</a> project allows instructors to host videos with custom annotations. Users can annotate videos with interactive text, images and video, translate unknown words in subtitles, and select scenes to skip among many other features.</p>
+
+            <h3 class="project-title" onclick="toggleApeDescription()">Automatic Pronunciation Evaluation (APE)</h3>
+            <p id="ape-description">The <a href="http://ape.byu.edu">Automatic Pronunciation Evaluation (APE)</a> project allows foreign-language learners to receive visual feedback to help improve their pronunciation.</p>
+
           </div>
           <div class="col-md-6">
-            <h2>Find Me On: <h2>
+            <h2>Find Me On: </h2>
             <p>
               <a class="btn btn-primary big-button" href="https://github.com/dcravenus">Github <i class="fa fa-github"></i></a>
               <!--<a class="btn btn-primary big-button">LinkedIn <i class="fa fa-linkedin"></i></a>-->
