Updated title and added LinkedIn button

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="container" id="wrapper">
 
         <div class="page-header">
-          <h1>Derrick Craven <small>Software/Web Developer</small></h1>
+          <h1>Derrick Craven <small> - Software Engineer</small></h1>
         </div>
 
         <div class="row">
@@ -57,8 +57,8 @@
           <div class="col-md-6">
             <h2>Find Me On: </h2>
             <p>
-              <a class="btn btn-primary big-button" href="https://github.com/dcravenus">Github <i class="fa fa-github"></i></a>
-              <!--<a class="btn btn-primary big-button">LinkedIn <i class="fa fa-linkedin"></i></a>-->
+              <a class="btn btn-primary big-button" href="http://github.com/dcravenus">Github <i class="fa fa-github"></i></a>
+              <a class="btn btn-primary big-button" href="http://www.linkedin.com/profile/view?id=368448314">LinkedIn <i class="fa fa-linkedin"></i></a>
             </p>
           </div>
         </div>
