Updated linkedin site address

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <h2>Find Me On: </h2>
             <p>
               <a class="btn btn-primary big-button" href="http://github.com/dcravenus">Github <i class="fa fa-github"></i></a>
-              <a class="btn btn-primary big-button" href="http://www.linkedin.com/profile/view?id=368448314">LinkedIn <i class="fa fa-linkedin"></i></a>
+              <a class="btn btn-primary big-button" href="http://www.linkedin.com/in/derrickcraven">LinkedIn <i class="fa fa-linkedin"></i></a>
             </p>
           </div>
         </div>
