--- a/index.html
+++ b/index.html
@@ -1,90 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Derrick Craven - Developer</title>
-
-    <!-- Libraries -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
-
-    <link href="css/styles.css" rel="stylesheet">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-    <!-- Google Analytics -->
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-53547000-1', 'auto');
-      ga('send', 'pageview');
-
-    </script>
-
-  </head>
-  <body>
-      
-      <div class="container" id="wrapper">
-
-        <div class="page-header">
-          <h1>Derrick Craven <small> - Software Engineer</small></h1>
-        </div>
-
-        <div class="row">
-          <div class="col-md-6">
-            <h2>Projects I've Worked On: </h2>
-
-            <h3 class="project-title" onclick="toggleWormDescription()">APE Worm</h3>
-            <p id="apeworm-description">The APE Worm is a real-time pronunciation evaluator that runs in the browser. Try it out <a href="https://byu-odh.github.io/apeworm/">here.</a></p>
-
-            <h3 class="project-title" onclick="toggleHummediaDescription()">Humanities Online Media</h3>
-            <p id="hummedia-description">The <a href="https://hummedia.byu.edu">Hummedia</a> project allows instructors to host videos with custom annotations. Users can annotate videos with interactive text, images and video, translate unknown words in subtitles, and select scenes to skip among many other features.</p>
-
-            <h3 class="project-title" onclick="toggleApeDescription()">Automatic Pronunciation Evaluation (APE)</h3>
-            <p id="ape-description">The <a href="http://ape.byu.edu">Automatic Pronunciation Evaluation (APE)</a> project allows foreign-language learners to receive visual feedback to help improve their pronunciation.</p>
-
-          </div>
-          <div class="col-md-6">
-            <h2>Find Me On: </h2>
-            <p>
-              <a class="btn btn-primary big-button" href="http://github.com/dcravenus">Github <i class="fa fa-github"></i></a>
-              <a class="btn btn-primary big-button" href="http://www.linkedin.com/in/derrickcraven">LinkedIn <i class="fa fa-linkedin"></i></a>
-            </p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-11">
-            <p id="info-tag">
-              Background -
-              <a href="https://accounts-flickr.yahoo.com/photos/99574551@N04/13976697616">Awakening of spring nature</a>
-              by
-              <a href="https://accounts-flickr.yahoo.com/photos/99574551@N04">Massmo Relsig</a> -
-              <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/">(CC BY-NC-ND 2.0)</a>
-            </p>
-          </div>
-          <div class="col-md-1">
-            <a id="info-link" onclick="toggleInfo()"><i class="fa fa-info-circle"></i></a>
-          </div>
-        </div>
-
+<head>
+  <meta charset="utf-8">
+  <meta content="IE=edge" http-equiv="X-UA-Compatible">
+  <meta content="width=device-width, initial-scale=1" name="viewport">
+  <title>Derrick Craven - Developer</title><!-- Libraries -->
+  <link href="css/styles.css" rel="stylesheet">
+</head>
+<body>
+  <nav>
+    <a href="#home">Home</a> <a href="#projects">Projects</a> <a href=
+    "http://github.com/dcravenus">GitHub</a><a href="http://www.linkedin.com/in/derrickcraven">LinkedIn</a>
+  </nav>
+  <div id="home">
+    <h1>Derrick Craven <small>- Web Developer/Software Engineer</small></h1>
+    <div class="flex-container">
+      <div class="card">
+        <img src="https://avatars0.githubusercontent.com/u/4764559?v=3&s=460" width=200 style="float: left;">
+      </div>
+      <div class="card" style="max-width:500px; font-size:150%;">
+        <p>
+        I like to build web-based applications that help brighten someone's day. I have built apps in JavaScript, PHP, and Python as well as writing much of my initial code in Java and C++.
+        </p>
+        <p>
+          Several of my projects are available on my <a href="#projects">projects</a> page and a lot of my code is on <a href="http://github.com/dcravenus">GitHub</a>.
+        </p>
       </div>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
-
-    <script src="js/jquery.backstretch.min.js"></script>
-    <script src="js/scripts.js"></script>
-  </body>
+      </div>
+    </div>
+  </div>
+  <div id="projects">
+    <h1>BYU Projects</h1>
+    <div class="flex-container">
+      <div class="card">
+        <div class="img-description">
+          <h3 class="project-title">VowelWorm</h3>
+          <p id="apeworm-description">The <a href=
+          "https://byu-odh.github.io/apeworm/">VowelWorm</a> is a real-time pronunciation
+          evaluator that runs in the browser.</p>
+        </div><!--<img src="img/vowel_worm.png" width=300>-->
+      </div>
+      <div class="card">
+        <div class="img-description">
+          <h3 class="project-title" onclick="toggleHummediaDescription()">
+          Humanities Online Media</h3>
+          <p id="hummedia-description">The <a href=
+          "https://hummedia.byu.edu">Hummedia</a> project allows instructors to
+          host videos with custom annotations. Users can annotate videos with
+          interactive text, images and video, translate unknown words in
+          subtitles, and select scenes to skip among many other features.</p>
+        </div><!-- <img src="img/hummedia.png" width=300> -->
+      </div>
+      <div class="card">
+        <h3 class="project-title" onclick="toggleApeDescription()">Automatic
+        Pronunciation Evaluation (APE)</h3>
+        <p id="ape-description">The <a href="http://ape.byu.edu">Automatic
+        Pronunciation Evaluation (APE)</a> project allows foreign-language
+        learners to receive visual feedback to help improve their
+        pronunciation.</p>
+      </div>
+    </div>
+  </div>
+</body>
 </html>
