--- a/index.html
+++ b/index.html
@@ -1,66 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta content="IE=edge" http-equiv="X-UA-Compatible">
-  <meta content="width=device-width, initial-scale=1" name="viewport">
-  <title>Derrick Craven - Developer</title><!-- Libraries -->
-  <link href="css/styles.css" rel="stylesheet">
-</head>
-<body>
-  <nav>
-    <a href="#home">Home</a> <a href="#projects">Projects</a> <a href=
-    "http://github.com/dcravenus">GitHub</a><a href="http://www.linkedin.com/in/derrickcraven">LinkedIn</a>
-  </nav>
-  <div id="home">
-    <h1>Derrick Craven <small>- Web Developer/Software Engineer</small></h1>
-    <div class="flex-container">
-      <div class="card">
-        <img src="https://avatars0.githubusercontent.com/u/4764559?v=3&s=460" width=200 style="float: left;">
-      </div>
-      <div class="card" style="max-width:500px; font-size:150%;">
-        <p>
-        I like to build web-based applications that help brighten someone's day. I have built apps in JavaScript, PHP, and Python as well as writing much of my initial code in Java and C++.
-        </p>
-        <p>
-          Several of my projects are available on my <a href="#projects">projects</a> page and a lot of my code is on <a href="http://github.com/dcravenus">GitHub</a>.
-        </p>
-      </div>
-
-      </div>
-    </div>
-  </div>
-  <div id="projects">
-    <h1>BYU Projects</h1>
-    <div class="flex-container">
-      <div class="card">
-        <div class="img-description">
-          <h3 class="project-title">VowelWorm</h3>
-          <p id="apeworm-description">The <a href=
-          "https://byu-odh.github.io/apeworm/">VowelWorm</a> is a real-time pronunciation
-          evaluator that runs in the browser.</p>
-        </div><!--<img src="img/vowel_worm.png" width=300>-->
-      </div>
-      <div class="card">
-        <div class="img-description">
-          <h3 class="project-title" onclick="toggleHummediaDescription()">
-          Humanities Online Media</h3>
-          <p id="hummedia-description">The <a href=
-          "https://hummedia.byu.edu">Hummedia</a> project allows instructors to
-          host videos with custom annotations. Users can annotate videos with
-          interactive text, images and video, translate unknown words in
-          subtitles, and select scenes to skip among many other features.</p>
-        </div><!-- <img src="img/hummedia.png" width=300> -->
-      </div>
-      <div class="card">
-        <h3 class="project-title" onclick="toggleApeDescription()">Automatic
-        Pronunciation Evaluation (APE)</h3>
-        <p id="ape-description">The <a href="http://ape.byu.edu">Automatic
-        Pronunciation Evaluation (APE)</a> project allows foreign-language
-        learners to receive visual feedback to help improve their
-        pronunciation.</p>
-      </div>
-    </div>
-  </div>
-</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta content="IE=edge" http-equiv="X-UA-Compatible"><meta content="width=device-width,initial-scale=1" name="viewport"><title>Derrick Craven - Developer</title><style>@font-face{font-family: 'Rambla'; font-style: normal; font-weight: 400; src: local("Rambla"), local("Rambla-Regular"), url(fonts/rambla.woff) format("woff");}body{font-family: 'Rambla', 'sans-serif'; background-image: url("img/field.jpg");}#home{display: none;}#home:target{display: block;}#projects{display: none;}#projects:target{display: block;}#contact{display: none;}#contact:target{display: block;}nav a:link{color: black}/* unvisited links */nav a:visited{color: black}/* visited links */nav a:hover{color: gray}/* user hovers */nav a:active{color: lightgray}/* active links */nav a{text-decoration: none; padding: 10px;}.flex-container{display: flex; flex-wrap: wrap; justify-content: center; align-items: flex-start;}.card{background-color: white; margin: 15px; box-shadow: 0 0 5px 0px black; padding: 10px; max-width: 300px;}.card-solo{background-color: white; margin: 15px; box-shadow: 0 0 5px 0px black; padding: 10px;}.project-title{margin:0px;}.project-title a{padding: 0px;}</style></head><body><nav><a href="#home">Home</a> <a href="#projects">Projects</a> <a href="http://github.com/dcravenus">GitHub</a><a href="http://www.linkedin.com/in/derrickcraven">LinkedIn</a></nav><div id="home"><h1>Derrick Craven <small>- Web Developer/Software Engineer</small></h1><div class="flex-container"><div class="card"><img src="https://avatars0.githubusercontent.com/u/4764559?v=3&s=460" width="200" style="float: left"></div><div class="card" style="max-width:500px; font-size:150%"><p>I like to build web-based applications that help brighten someone's day. I have built apps in JavaScript, PHP, and Python as well as writing much of my initial code in Java and C++.</p><p>Several of my projects are available on my <a href="#projects">projects</a> page and a lot of my code is on <a href="http://github.com/dcravenus">GitHub</a>.</p></div></div></div><div id="projects"><h1>BYU Projects</h1><div class="flex-container"><div class="card"><div class="img-description"><h3 class="project-title">VowelWorm</h3><p id="apeworm-description">The <a href="https://byu-odh.github.io/apeworm/">VowelWorm</a> is a real-time pronunciation evaluator that runs in the browser.</p></div></div><div class="card"><div class="img-description"><h3 class="project-title" onclick="toggleHummediaDescription()">Humanities Online Media</h3><p id="hummedia-description">The <a href="https://hummedia.byu.edu">Hummedia</a> project allows instructors to host videos with custom annotations. Users can annotate videos with interactive text, images and video, translate unknown words in subtitles, and select scenes to skip among many other features.</p></div></div><div class="card"><h3 class="project-title" onclick="toggleApeDescription()">Automatic Pronunciation Evaluation (APE)</h3><p id="ape-description">The <a href="http://ape.byu.edu">Automatic Pronunciation Evaluation (APE)</a> project allows foreign-language learners to receive visual feedback to help improve their pronunciation.</p></div></div></div></body></html>
