--- a/index.raw.html
+++ b/index.raw.html
@@ -16,7 +16,7 @@
     <h1>Derrick Craven <small>- Web Developer/Software Engineer</small></h1>
     <div class="flex-container">
       <div class="card">
-        <img src="https://avatars0.githubusercontent.com/u/4764559?v=3&s=460" width=200 style="float: left;">
+        <img src="img/portrait.jpg" style="float: left;">
       </div>
       <div class="card" style="max-width:500px; font-size:150%;">
         <p>
