--- a/temp.html
+++ b/temp.html
@@ -22,14 +22,20 @@
         <p>The <a href="https://hummedia.byu.edu">Hummedia</a> project allows instructors to host videos with custom annotations. Users can annotate videos with interactive text, images and video,
         translate unknown words in subtitles, and select scenes to skip among many other features.</p>
 
+        <img src="img/hummedi.png">
+
         <h3>Automatic Pronunciation Evaluation (APE)</h3>
-        <p>The <a href="http://ape.byu.edu">Automatic Pronunciation Evaluation (APE)</a> project allows foreign-language learners to receive visual feedback to help improve their pronunciation.</p>
+        <p>The <a href="http://ape.byu.edu">Automatic Pronunciation Evaluation (APE)</a> project allows foreign-language learners to receive visual feedback to help improve their pronunciation. The <a href="https://byu-odh.github.io/apeworm/">VowelWorm</a> is a real-time pronunciation evaluator that runs in the browser.</p>
+
+        <img src="img/vowelworm.png">
 
         <h3>TV Showtimes</h3>
         <p>I wanted an easier way to view when my favorite TV shows air new episodes so I built a simple <a href="http://dcravenus.github.io/tvshowinfo/">TV Showtimes</a> app. The app uses the TVmaze
         API to load basic metadata about different TV shows. The app stores all its data on the client to reduce API calls and increase page load speed. As of this writing, TVmaze does not yet
         support HTTPS so adding new shows may require specifically allowing HTTP requests from a page loaded with HTTPS. In other words, click the warning in Chrome's address bar and then click "Load
         unsafe scripts."</p>
+
+        <img src="img/tvshowtimes.png">
 
 
         <h2>Work Experience</h2>
