--- a/index.html
+++ b/index.html
@@ -31,10 +31,8 @@
         <img src="img/vowelworm.png">
 
         <h3>TV Showtimes</h3>
-        <p>I wanted an easier way to view when my favorite TV shows air new episodes so I built a simple <a href="http://dcravenus.github.io/tvshowinfo/">TV Showtimes</a> app. The app uses the TVmaze
-        API to load basic metadata about different TV shows. The app stores all its data on the client to reduce API calls and increase page load speed. As of this writing, TVmaze does not yet
-        support HTTPS so adding new shows may require specifically allowing HTTP requests from a page loaded with HTTPS. In other words, click the warning in Chrome's address bar and then click "Load
-        unsafe scripts."</p>
+        <p>I wanted an easier way to view when my favorite TV shows air new episodes so I built a simple <a href="http://www.derrickcraven.com/tvshowinfo/">TV Showtimes</a> app. The app uses the TVmaze
+        API to load basic metadata about different TV shows. The app stores all its data on the client to reduce API calls and increase page load speed.</p>
 
         <img src="img/tvshowtimes.png">
 
