Clean up color and language

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <div id="content">
         <h2>About Me</h2>
-        <p>I like to build web-based applications that help brighten someone's day. I have built apps in JavaScript, PHP, and Python as well as writing much of my initial code in Java and C++.</p>
+        <p>I like to build web-based applications that are a joy to use and easy to maintain. I have built apps in JavaScript, PHP, and Python as well as writing much of my initial code in Java and C++.</p>
 
 
         <h2>Projects I've Worked On</h2>
@@ -27,13 +27,13 @@
 
 
         <h3>Hummedia</h3>
-        <p>The <a href="https://hummedia.byu.edu">Hummedia</a> project allows instructors to host videos with custom annotations. Users can annotate videos with interactive text, images and video,
-        translate unknown words in subtitles, and select scenes to skip among many other features.</p>
+        <p>The <a href="https://hummedia.byu.edu">Hummedia</a> project allows instructors to host videos with custom annotations. Users can annotate videos with interactive text, images and video;
+        use translation tools to learn new languages; and select scenes to skip among many other features.</p>
 
         <img src="img/hummedia.png">
 
         <h3>Automatic Pronunciation Evaluation (APE)</h3>
-        <p>The <a href="http://ape.byu.edu">Automatic Pronunciation Evaluation (APE)</a> project allows foreign-language learners to receive visual feedback to help improve their pronunciation. The <a href="https://byu-odh.github.io/apeworm/">VowelWorm</a> is a real-time pronunciation evaluator that runs in the browser.</p>
+        <p>The <a href="http://ape.byu.edu">Automatic Pronunciation Evaluation (APE)</a> project allows foreign-language learners to receive visual feedback to help improve their pronunciation. The <a href="https://byu-odh.github.io/apeworm/">VowelWorm</a> is a real-time version of the project that uses JavaScript to give immediate results in the browser.</p>
 
         <img src="img/vowelworm.png">
 
