--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 
         <img src="img/tvshowtimes.png">
 
+        <h3><a href="https://fir-64e92.firebaseapp.com">Recipes</a></h3>
+        <h3><a href="https://github.com/dcravenus/poke-graphql">poke-graphql</a></h3>
+
 
         <h3>Hummedia</h3>
         <p>The <a href="https://hummedia.byu.edu">Hummedia</a> project allows instructors to host videos with custom annotations. Users can annotate videos with interactive text, images and video;
