Add another link

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <h3><a href="https://fir-64e92.firebaseapp.com">Recipes</a></h3>
         <h3><a href="https://github.com/dcravenus/poke-graphql">poke-graphql</a></h3>
-
+	<h3><a href="https://github.com/dcravenus/web-socket-chat">web-socket-chat</a></h3>
 
         <h3>Hummedia</h3>
         <p>The <a href="https://hummedia.byu.edu">Hummedia</a> project allows instructors to host videos with custom annotations. Users can annotate videos with interactive text, images and video;
