--- a/index.html
+++ b/index.html
@@ -25,11 +25,6 @@
 
         <img src="img/tvshowtimes.png">
 
-        <h3><a href="https://fir-64e92.firebaseapp.com">Recipes</a></h3>
-        <h3><a href="https://github.com/dcravenus/poke-graphql">poke-graphql</a></h3>
-        <h3><a href="https://github.com/dcravenus/web-socket-chat">web-socket-chat</a></h3>
-        <h3><a href="https://github.com/dcravenus/ascii_game">ASCII Maze Game</a></h3>
-
         <h3>Hummedia</h3>
         <p>The <a href="https://hummedia.byu.edu">Hummedia</a> project allows instructors to host videos with custom annotations. Users can annotate videos with interactive text, images and video;
         use translation tools to learn new languages; and select scenes to skip among many other features.</p>
@@ -41,7 +36,11 @@
 
         <img src="img/vowelworm.png">
 
-
+        <h3><a href="https://fir-64e92.firebaseapp.com">Recipes</a></h3>
+        <h3><a href="https://github.com/dcravenus/poke-graphql">poke-graphql</a></h3>
+        <h3><a href="https://github.com/dcravenus/web-socket-chat">web-socket-chat</a></h3>
+        <h3><a href="https://github.com/dcravenus/ascii_game">ASCII Maze Game</a></h3>
+        <h3><a href="https://github.com/dcravenus/ebookfilter">ebookfilter</a></h3>
 
 
         <h2>Work Experience</h2>
