Add ebook-filter link

--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <a href="/pixel-color">pixel-color</a>
 <a href="https://github.com/dcravenus/ascii_game">ascii-maze</a>
+<a href="https://github.com/dcravenus/ebookfilter">ebook-filter</a>
