--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
-<a href="/pixel-color">pixel-color</a>
-<a href="https://github.com/dcravenus/ascii_game">ascii-maze</a>
-<a href="https://github.com/dcravenus/ebookfilter">ebook-filter</a>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + React + TS</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
+</html>
